test on portable computer

--- a/cse_311/hw7/hw7.tex
+++ b/cse_311/hw7/hw7.tex
@@ -144,6 +144,9 @@
     \textbf{Hint}: Remember that with structural induction you must show $P(s)$ for every element $s$ that is added by the recursive rule -- you will need to show $P()$ holds for two different elements in your inductive step.
 
     \textbf{Hint}: The inequality you're showing in your inductive step isn't always tight (that is it could be that $<$ is true, not just $\leq$), remember to keep your target in mind!
+    \begin{tcolorbox}
+        
+    \end{tcolorbox}
 \end{question}
 
 \begin{question}{Plants [23 points]}
