--- a/cse_311/hw7/hw7.tex
+++ b/cse_311/hw7/hw7.tex
@@ -254,20 +254,42 @@
 
     \begin{enumerate}[label=(\alph*)]
         \item Imagine you wanted to prove $P(n)$ for all $n\in \mathbb{N}, n \geq 1$ by induction. Try for about 5-10 minutes to write an inductive proof and see where you get stuck. For this part, just write ``I spent about $X$ minutes trying'' (as long as you report an $X$ at least 5, you will get this point).  [1 point]
-
+            \begin{tcolorbox}
+                I spent about 8 minutes trying.
+            \end{tcolorbox}
         \item Give an example of numbers $a,b$ such that $a < b$ but $3a+2 \not< 3b$. [1 point]\\
-              \textbf{Hint:} You might want to choose non-integer numbers.
+            \textbf{Hint:} You might want to choose non-integer numbers.
+                
+            \begin{tcolorbox}
+                Answer here: \\
+                Suppose $a = \frac{1}{3}$ and $b = \frac{1}{2}$. Then, $3a+2 = 1+2 = 3\not< 3\cdot \frac{1}{2} = \frac{3}{2}$.
+            \end{tcolorbox}
 
-              \begin{tcolorbox}
-                  Answer here
-              \end{tcolorbox}
-
-              Now imagine that for some number $m$, $f(m) = a$ and $g(m) = b$. If there were such a number $m$, it would be very hard to prove the inductive step of this proof! It would be impossible -- from your calculation in part b, $P(m+1)$ would be false then! This observation is an indication that our $P()$ isn't specific enough (or ``strong'' enough, as we'd usually say). Our $P()$ \textbf{is} true for the particular $f,g$ in this problem! But unless our $P()$ ``rules out'' the existence of that value $m$ we won't be able to write the proof.  Take a moment to ponder this observation -- it's the main point of this problem, but also somewhat mind-bending. (Don't write anything for this paragraph.)
+            Now imagine that for some number $m$, $f(m) = a$ and $g(m) = b$. If there were such a number $m$, it would be very hard to prove the inductive step of this proof! It would be impossible -- from your calculation in part b, $P(m+1)$ would be false then! This observation is an indication that our $P()$ isn't specific enough (or ``strong'' enough, as we'd usually say). Our $P()$ \textbf{is} true for the particular $f,g$ in this problem! But unless our $P()$ ``rules out'' the existence of that value $m$ we won't be able to write the proof.  Take a moment to ponder this observation -- it's the main point of this problem, but also somewhat mind-bending. (Don't write anything for this paragraph.)
 
         \item Let's try to really prove the claim now. Define the predicate $Q(n)$ to be ``$g(n) \leq f(n) - 1$''. Explain why showing $Q(n)$ for all $n\geq 1$ will also show $P(n)$ for all $n\geq 1$ (1 sentence) [2 points]
-
+            \begin{tcolorbox}
+                If we proof $Q(n)$, then we know that for all $n\in \mathbb{N}, n \geq 1$, $g(n) \leq f(n) - 1$. And by doing algebra, we can get that $g(n) + 1 \leq f(n)$. Since we know that $g(n) < g(n) + 1$, 
+                we can get that $g(n)<g(n)+1\leq f(n)$, which is the predicate $P(n)$. Thus if shown $Q(n)$ for all $n\geq 1$ then $P(n)$ for all $n\geq 1$ is shown.
+            \end{tcolorbox}
         \item Prove $Q(n)$ holds for all integers $n$, with $n\geq 1$ by induction. [20 points]
-
+            \begin{tcolorbox}
+            Proof by induction: \\
+            The predicate we want to proof, $Q(n)$, is that: ``for all $n \in \mathbb{N}, n\geq 1$, $g(n) \leq f(n) - 1$''\\ \\
+            \textbf{Base Case:} When $n=1$, $Q(1)$ will be: \\
+                $g(1) = 2$, $f(1) = 3$, $g(1) = 2 \leq 3 - 1 = f(n) - 1$. Thus $Q(1)$ is true. \\ \\
+            \textbf{Induction Hypothesis:} Suppose that $k$ is an integer and $k\geq 1$. $Q(k)$ holds. Which means that $g(k) \leq f(k)-1$. We can also rewrite it in the form of $g(k)-f(k)+1 \leq 0$ \\ \\
+            \textbf{Inductive step:} We want to proof that $Q(k+1)$ is true, which is $g(k+1) \leq f(k+1)-1$. By applying algebra, the target can be changed to $g(k+1)-f(k+1)+1 \leq 0$.
+            \begin{align*}
+                g(k+1)-f(k+1)+1 &= (3g(k)+2) - 3f(k)+1 && \text{By the defn of function f and g} \\
+                &= 3g(k)-3f(k)+3 && \text{Algebra} \\
+                &= 3(g(k)-f(k)+1)&& \text{Algebra, extracting 3 out} \\
+                &\leq 3\cdot 0 && \text{Replacing by the inequality in IH} \\
+                &= 0 && \text{Algebra} 
+            \end{align*}
+            Since in the steps above we proved that $g(k+1)-f(k+1)+1 \leq 0$, which means that $g(k+1) \leq f(k+1)-1$. Thus, if $Q(k)$ is true, then we can proof that $Q(k+1)$ is true. \\ \\
+            Thus, by mathematical induction, we proved that for all $n \in \mathbb{N}, n\geq 1$, $g(n) \leq f(n) - 1$ is true.
+            \end{tcolorbox}
         \item This proof technique is called ``strengthened induction'' (not to be confused with strong vs. weak induction).
               We wanted to show $P()$, but $P()$ wasn't suitable for induction, the I.H. was not enough information to easily prove our target in the I.S.. We defined a strengthened claim, $Q()$. (we call $Q()$ ``stronger'' because once you know $Q()$ is true you also know $P()$ must be true).
 
@@ -282,7 +304,9 @@
               Prove that the relation $\prec$ is transitive  [8 points]\\
               If you're using LaTeX, the symbol in this problem is \texttt{$\backslash$prec}.\\
               \textbf{Hint:} You know how to do this kind of proof! Look at the definition of transitive---it's a for-all statement with an implication inside. You've done tons of proofs like that!
-
+        \begin{tcolorbox}
+            Suppose that $a,b,c$ are arbitrary numbers in the set $\mathbb{Z}^+$, and $a\prec b$ and $b\prec c$.
+        \end{tcolorbox}
         \item Disprove the following statement: for all relations $R$, $S$: if $R$ and $S$ are antisymmetric relations on the same set $A$, then the relation $R \cup S$ is antisymmetric on the set $A$ as well. [4 Points]\\
               \textbf{Hint:} Remember that relations are sets of ordered pairs! Since they're sets, we can do set operations (like union) on them. The combined relation has all pairs that are in $R$ or $S$ (or both)\\
               \textbf{Hint:} You know how to do this kind of proof too! You're disproving a for-all. Remember to make your counter-example as specific as possible.
